forms-flow-api/infra/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-api
  namespace : forms-flow-api
  labels:
    app.kubernetes.io/name: formsflowapi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: formsflowapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: formsflowapi
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: formsflowapi
          image: sofiamunicipalitydigitall/forms-flow-api:latest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c",  "echo 'nameserver 8.8.8.8' >> /etc/resolv.conf && apt update && apt -y install cron vim  && env >> /etc/environment && crontab -l | { cat; echo '*/1 * * * * (FLASK_APP=/forms-flow-api/app/manage.py bash -c \"/venv/bin/flask cron expire-documents\") >> /var/log/syslog 2>&1'; } | crontab - && service cron start " ]
          ports:
            - containerPort: 5000
              name: http-api
              protocol: TCP
